# icenet-mp

./: .pre-commit-config.yaml  README.md  data.json  pyproject.toml
.github/workflows/: test_code.yaml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_036628fc610e2005___init___py.html  z_036628fc610e2005_weighted_bce_loss_py.html  z_036628fc610e2005_weighted_l1_loss_py.html  z_036628fc610e2005_weighted_mse_loss_py.html  z_0aca00fa50c255e7___init___py.html  z_0aca00fa50c255e7_base_processor_py.html  z_0aca00fa50c255e7_null_py.html  z_0aca00fa50c255e7_unet_py.html  z_0aca00fa50c255e7_vit_py.html  z_0d15a84c26607823___init___py.html  z_0d15a84c26607823_geographic_field_py.html  z_0d15a84c26607823_geographic_grid_py.html  z_0d15a84c26607823_geographic_metadata_py.html  z_0d15a84c26607823_grid_factory_py.html  z_0d15a84c26607823_reproject_py.html  z_1a8d45448740d61f___init___py.html  z_1a8d45448740d61f_argo_py.html  z_1a8d45448740d61f_ftp_py.html  z_414d260bc2b15c74___init___py.html  z_414d260bc2b15c74_base_encoder_py.html  z_414d260bc2b15c74_cnn_encoder_py.html  z_414d260bc2b15c74_naive_linear_encoder_py.html  z_414d260bc2b15c74_piecewise_encoder_py.html  z_414d260bc2b15c74_reprojection_encoder_py.html  z_47824e9f2e1194ac___init___py.html  z_47824e9f2e1194ac_exceptions_py.html  z_47824e9f2e1194ac_model_service_py.html  z_47824e9f2e1194ac_plugins_py.html  z_47824e9f2e1194ac_utils_py.html  z_75875788741b2512___init___py.html  z_75875788741b2512_base_model_py.html  z_75875788741b2512_ddpm_py.html  z_75875788741b2512_encode_process_decode_py.html  z_75875788741b2512_persistence_py.html  z_762428a5d36f1be1___init___py.html  z_762428a5d36f1be1_datasets_py.html  (+81 more)
icenet_mp/: model_service.py  plugins.py  utils.py
icenet_mp/callbacks/: __init__.py  activation_saver.py  metric_summary_callback.py  plotting_callback.py
icenet_mp/cli/: datasets.py  evaluate.py  main.py  train.py
icenet_mp/config/: base_isambardai.yaml
icenet_mp/config/data/: full_north.yaml  full_south.yaml  sample-ssmis.yaml  sample.yaml
icenet_mp/config/data/datasets/: demo_sicnorth_osisaf_25k_2017_2019_24h_v1.yaml  demo_weathernorth_era5_0p5_2017_2019_24h_v1.yaml  full_sicnorth_osisaf_25k_1979_2024_24h_v1.yaml  full_sicnorth_osisaf_25p0km_1979_2024_24h_v2.yaml  full_sicnorth_ssmis_25k_1979_2024_24h_v1.yaml  full_sicnorth_ssmis_25p0km_1979_2024_24h_v2.yaml  full_sicsouth_osisaf_25k_1979_2024_24h_v1.yaml  full_sicsouth_osisaf_25p0km_1979_2024_24h_v2.yaml  full_sicsouth_ssmis_25k_1979_2024_24h_v1.yaml  full_sicsouth_ssmis_25p0km_1979_2024_24h_v2.yaml  full_weathernorth_era5_0p25_1979_2025_24h_v1.yaml  full_weathernorth_era5_0p5_1979_2024_24h_v1.yaml  full_weathernorth_era5_25p0km_1979_2025_24h_v1.yaml  full_weathernorth_era5_25p0km_1979_2025_24h_v3.yaml  full_weathersouth_era5_0p25_1979_2025_24h_v1.yaml  full_weathersouth_era5_0p5_1979_2024_24h_v1.yaml  full_weathersouth_era5_25p0km_1979_2025_24h_v1.yaml  full_weathersouth_era5_25p0km_1979_2025_24h_v3.yaml  nbsamp_sicnorth_osisaf_25k_2003_2003_24h_v1.yaml  nbsamp_sicnorth_osisaf_25k_2010_2010_24h_v1.yaml  nbsamp_sicnorth_osisaf_25k_2018_2018_24h_v1.yaml  nbsamp_weathersouth_era5_0p5_2020_2020_24h_v1.yaml  samp_sicnorth_osisaf_25k_2017_2019_24h_v1.yaml  (+14 more)
icenet_mp/config/evaluate/: default.yaml
icenet_mp/config/model/: cnn_null_cnn.yaml  cnn_unet_cnn.yaml  cnn_vit_cnn.yaml  naive_null_naive.yaml  naive_unet_naive.yaml  naive_vit_naive.yaml  piecewise_null_piecewise.yaml  piecewise_unet_piecewise.yaml  piecewise_vit_piecewise.yaml  quick_test.yaml  reproject_unet_naive.yaml
icenet_mp/data_loaders/: combined_dataset.py  common_data_module.py  single_dataset.py
icenet_mp/data_processors/: __init__.py  data_downloader.py
icenet_mp/data_processors/filters/: __init__.py  doubling_filter.py  nan_to_num.py  nan_to_num_filter.py  reproject_filter.py  set_geography_filter.py
icenet_mp/data_processors/sources/: ftp.py
icenet_mp/evaluation/: evaluator.py
icenet_mp/geotools/: __init__.py  geographic_field.py  geographic_grid.py  geographic_metadata.py  grid_factory.py  reproject.py
icenet_mp/losses/: __init__.py  weighted_bce_loss.py  weighted_l1_loss.py  weighted_mse_loss.py
icenet_mp/metrics/: __init__.py  base_metrics.py  icenet_accuracy.py  sie_error.py  sie_error_abs.py
icenet_mp/models/: base_model.py  ddpm.py  encode_process_decode.py
icenet_mp/models/common/: __init__.py  normalised_fold.py  permute.py  restrict_range.py  shift.py
icenet_mp/models/decoders/: __init__.py  base_decoder.py  cnn_decoder.py  naive_linear_decoder.py  piecewise_decoder.py
icenet_mp/models/encoders/: __init__.py  base_encoder.py  piecewise_encoder.py  reprojection_encoder.py
icenet_mp/models/metrics/: base_metrics.py  sie_error_abs.py
icenet_mp/training/: trainer.py
icenet_mp/types/: __init__.py  complex_datatypes.py  enums.py  protocols.py  simple_datatypes.py  typedefs.py
icenet_mp/visualisations/: __init__.py  hook_manager.py
notebooks/: layer_diagnostics.ipynb
tests/: conftest.py  test_cli.py  test_model_service.py
tests/callbacks/: test_metric_summary_callback.py
tests/config/: test_config_files.py
tests/data_loaders/: test_combined_dataset.py  test_common_data_module.py  test_single_dataset.py
tests/data_processors/: test_data_downloader.py
tests/models/: test_base_model.py  test_common.py  test_decoders.py  test_encode_process_decode.py  test_encoders.py  test_persistence.py  test_piecewise_encode_decode.py  test_reprojection_encoder.py
(+3 files in other folders)
